--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Functional Programming Framework",
   "main": "index.js",
   "scripts": {
-    "build": "sjs src/*js --out-dir out",
+    "start": "webpack --config webpack.config.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,12 +19,17 @@
   },
   "homepage": "https://github.com/SquidLabs/SquidJS#readme",
   "devDependencies": {
-    "@sweet-js/cli": "^3.0.13",
-    "@sweet-js/helpers": "^4.0.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.18.1",
+    "babel-preset-flow": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.18",
+    "eslint": "4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0"
+    "eslint-config-airbnb-flow": "^1.0.2",
+    "eslint-plugin-import": "^2.9.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10"
   }
 }
