--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack --config webpack.config.js",
     "build": "webpack",
+    "flow": "flow",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-plugin-import": "^2.9.0",
+    "flow-bin": "^0.66.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10"
   }
