--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack --config webpack.config.js",
     "build": "webpack",
     "flow": "flow",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run --browsers Chrome karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,19 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "benchmark": "^2.1.4",
     "clean-webpack-plugin": "^0.1.18",
     "eslint": "4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-plugin-import": "^2.9.0",
     "flow-bin": "^0.66.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-browserstack-launcher": "^1.3.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-sauce-launcher": "^1.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10"
   }
